tests/check/elements/funnel.c
@@ -212,6 +212,28 @@ GST_START_TEST (test_funnel_eos)
   gst_object_unref (td.funnelsink11);
   fail_unless (num_eos == 2);
 
+  /* send only eos to check, it handles empty streams */
+  td.funnelsink11 = gst_element_get_request_pad (td.funnel, "sink_11");
+  fail_unless (td.funnelsink11 != NULL);
+  fail_unless (!strcmp (GST_OBJECT_NAME (td.funnelsink11), "sink_11"));
+
+  fail_unless (GST_PAD_LINK_SUCCESSFUL (gst_pad_link (td.mysrc1,
+              td.funnelsink11)));
+
+  fail_unless (gst_pad_push_event (td.mysrc1, gst_event_new_flush_start ()));
+  fail_unless (gst_pad_push_event (td.mysrc1, gst_event_new_flush_stop (TRUE)));
+  fail_unless (gst_pad_push_event (td.mysrc2, gst_event_new_flush_start ()));
+  fail_unless (gst_pad_push_event (td.mysrc2, gst_event_new_flush_stop (TRUE)));
+
+  fail_unless (gst_pad_push_event (td.mysrc1, gst_event_new_eos ()));
+  fail_unless (gst_pad_push_event (td.mysrc2, gst_event_new_eos ()));
+  fail_unless (num_eos == 2);
+
+  fail_unless (gst_pad_unlink (td.mysrc1, td.funnelsink11));
+  gst_element_release_request_pad (td.funnel, td.funnelsink11);
+  gst_object_unref (td.funnelsink11);
+  fail_unless (num_eos == 3);
+
   td.funnelsink11 = gst_element_get_request_pad (td.funnel, "sink_11");
   fail_unless (td.funnelsink11 != NULL);
   fail_unless (!strcmp (GST_OBJECT_NAME (td.funnelsink11), "sink_11"));
